--- a/source/form.html
+++ b/source/form.html
@@ -11,50 +11,54 @@
         Оставьте свой отзыв
       </h2>
       <p class="description__text--form">
-        Помогите нашим отелям стать лучше!<br> оставьте отзыв о<br> них, а также о посещенных вами<br> достопримечательностях
+        Помогите нашим отелям стать лучше!<br> оставьте отзыв о<br> них, а также о посещенных вами<br>
+        достопримечательностях
       </p>
     </header>
   </section>
   <form action="https://echo.htmlacademy.ru" method="post">
-    <div class="your-self" role="group" aria-labelledby="your-self">
-      <h3 class="your-self__title" id="your-self">Представьтесь:</h3>
-      <ul class="your-self__list">
-        <li class="your-self__item">
-          <label>
-            Имя<span aria-hidden="true">*</span>:
-            <input type="text" placeholder="Пётр" required>
-          </label>
-        </li>
-        <li class="your-self__item">
-          <label>
-            Фамилия<span aria-hidden="true">*</span>:
-            <input type="text" placeholder="Пустота" required>
-          </label>
-        </li>
-        <li class="your-self__item">
-          <label>
-            Отчество:
-            <input type="text" placeholder="Викторович">
-          </label>
-        </li>
-      </ul>
-    </div>
-    <div class="your-contact" role="group" aria-labelledby="your-contact">
-      <h3 class="your-contact__title" id="your-contact">Контактная информация:</h3>
-      <ul class="your-contact__list">
-        <li class="your-contact__item">
-          <label>
-            Контактный телефон<span aria-hidden="true">*</span>:
-            <input type="tel" placeholder="Введите телефон" required>
-          </label>
-        </li>
-        <li class="your-contact__item">
-          <label>
-            Электронная почта<span aria-hidden="true">*</span>:
-            <input type="email" placeholder="Введите e-mail" required>
-          </label>
-        </li>
-      </ul>
+    <div class="your">
+      <div class="your-self" role="group" aria-labelledby="your-self">
+        <h3 class="your-self__title" id="your-self">Представьтесь:</h3>
+        <ul class="your-self__list">
+          <li class="your-self__item">
+            <label>
+              Имя<span aria-hidden="true">*</span>:
+              <input type="text" placeholder="Пётр" required>
+            </label>
+          </li>
+          <li class="your-self__item">
+            <label>
+              Фамилия<span aria-hidden="true">*</span>:
+              <input type="text" placeholder="Пустота" required>
+            </label>
+          </li>
+          <li class="your-self__item">
+            <label>
+              Отчество:
+              <input type="text" placeholder="Викторович">
+            </label>
+          </li>
+        </ul>
+      </div>
+      <div class="your-contact" role="group" aria-labelledby="your-contact">
+        <h3 class="your-contact__title" id="your-contact">Контактная информация:</h3>
+        <ul class="your-contact__list">
+          <li class="your-contact__item">
+            <label>
+              Контактный телефон<span aria-hidden="true">*</span>:
+              <input type="tel" placeholder="Введите телефон" required>
+            </label>
+          </li>
+          <li class="your-contact__item">
+            <label>
+              Электронная почта<span aria-hidden="true">*</span>:
+              <input type="email" placeholder="Введите e-mail" required>
+            </label>
+          </li>
+        </ul>
+
+      </div>
     </div>
     <div class="impression" role="group" aria-labelledby="impression">
       <h3 class="impression__title" id="impression">Ваше общее впечатление:</h3>
@@ -109,11 +113,13 @@
       </ul>
     </div>
     <div class="emotions">
-      <label for="emotions">Опишите свои эмоции:</label>
-      <textarea id="emotions"></textarea>
+      <p class="emotions__title">Опишите свои эмоции:</p>
+      <textarea id="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
     </div>
-    <button class="button" type="submit">Отправить отзыв</button>
-    <p aria-hidden="true">* — обязательные поля</p>
+    <div class="button__form">
+      <button class="button button--form" type="submit">Отправить отзыв</button>
+      <p class="button__text" aria-hidden="true">* — обязательные поля</p>
+    </div>
   </form>
 </main>
 {% endblock %}
