--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
     <picture>
       <source media="(min-width: 1200px)" srcset="./img/map-desktop@1x.jpg 1x, ./img/map-desktop@2x.jpg 2x">
       <source media="(min-width: 768px)" srcset="./img/map-tablet@1x.jpg 1x, ./img/map-tablet@2x.jpg 2x">
-      <img class="maps__image" width="320px" height="350px" src="./img/map-mobile@1x.jpg" srcset="./img/map-mobile@2x.jpg 2x"
+      <img class="maps__image" src="./img/map-mobile@1x.jpg" srcset="./img/map-mobile@2x.jpg 2x"
         alt="Карта городка Седона">
     </picture>
   </div>
