--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
               Седона не атракцион для туристов, там течет своя жизнь
             </p>
           </div>
-          <img class="photo-sedona" src="./img/photo-city.jpg" width="512" height="256" alt="Фотография седоны">
+          <img class="photo-sedona" src="./img/photo-city@1x.jpg" srcset="./img/photo-city@2x.jpg 2x" alt="Фотография седоны">
           <div class="advantages">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
