--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,12 @@
               Седона не атракцион для туристов, там течет своя жизнь
             </p>
           </div>
-          <img class="photo-sedona" src="./img/photo-city@1x.jpg" srcset="./img/photo-city@2x.jpg 2x" alt="Фотография седоны">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="./img/photo-citi-desktop@1x.jpg 1x, ./img/photo-citi--desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="./img/photo-citi-tablet@1x 1x, ./img/photo-citi-tablet@2x 2x">
+            <img class="photo-sedona" src="./img/photo-city-mobile@1x.jpg" srcset="./img/photo-city-mobile@2x.jpg 2x"
+              alt="Фотография седоны">
+          </picture>
           <div class="advantages">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
