--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,9 @@
               Да, по нему можно пройти! Если вы осмелитесь, конечно
             </p>
           </div>
-          <img class="photo-sedona" src="./img/photo-bridge.jpg" width="512" height="256" alt="Фотография моста">
+          <source media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop@1x.jpg 1x, ./img/photo-bridge-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="./img/photo-bridge-tablet@1x.jpg 1x, ./img/photo-bridge-tablet@2x.jpg 2x">
+          <img class="photo-sedona" src="./img/photo-bridge-mobile@1x.jpg" srcset="./img/photo-bridge-mobile@2x.jpg 2x" alt="Фотография моста">
         </li>
         <li class="benefits__item">
           <h3 class="benefits__number">
