--- a/source/index.html
+++ b/source/index.html
@@ -25,12 +25,15 @@
               Седона не атракцион для туристов, там течет своя жизнь
             </p>
           </div>
-          <picture>
-            <source media="(min-width: 1200px)" srcset="./img/photo-citi-desktop@1x.jpg 1x, ./img/photo-citi--desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="./img/photo-citi-tablet@1x 1x, ./img/photo-citi-tablet@2x 2x">
-            <img class="photo-sedona" src="./img/photo-city-mobile@1x.jpg" srcset="./img/photo-city-mobile@2x.jpg 2x"
-              alt="Фотография седоны">
-          </picture>
+          <div class="benefits__img">
+            <picture>
+              <source media="(min-width: 1200px)"
+                srcset="./img/photo-citi-desktop@1x.jpg 1x, ./img/photo-citi--desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/photo-citi-tablet@1x 1x, ./img/photo-citi-tablet@2x 2x">
+              <img class="photo-sedona" src="./img/photo-city-mobile@1x.jpg" srcset="./img/photo-city-mobile@2x.jpg 2x"
+                alt="Фотография седоны">
+            </picture>
+          </div>
           <div class="advantages">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
@@ -57,9 +60,14 @@
               Да, по нему можно пройти! Если вы осмелитесь, конечно
             </p>
           </div>
-          <source media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop@1x.jpg 1x, ./img/photo-bridge-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="./img/photo-bridge-tablet@1x.jpg 1x, ./img/photo-bridge-tablet@2x.jpg 2x">
-          <img class="photo-sedona" src="./img/photo-bridge-mobile@1x.jpg" srcset="./img/photo-bridge-mobile@2x.jpg 2x" alt="Фотография моста">
+          <div class="benefits__img">
+            <source media="(min-width: 1200px)"
+              srcset="./img/photo-bridge-desktop@1x.jpg 1x, ./img/photo-bridge-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)"
+              srcset="./img/photo-bridge-tablet@1x.jpg 1x, ./img/photo-bridge-tablet@2x.jpg 2x">
+            <img class="photo-sedona" src="./img/photo-bridge-mobile@1x.jpg"
+              srcset="./img/photo-bridge-mobile@2x.jpg 2x" alt="Фотография моста">
+          </div>
         </li>
         <li class="benefits__item">
           <h3 class="benefits__number">
